<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include
        android:id="@+id/dialog_toolbar"
        layout="@layout/dialog_toolbar_create"/>
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAlignment="viewStart" />
            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"/>

            <requestFocus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="viewStart" />
            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plan_alias"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/txtPlanAlias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plan_alias" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <EditText
                android:id="@+id/txtCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/organization" />

            <EditText
                android:id="@+id/txtOrganization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/organization" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/txtAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/txtAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city" />

            <EditText
                android:id="@+id/txtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/province" />

            <EditText
                android:id="@+id/txtProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/province" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postalCode" />

            <EditText
                android:id="@+id/txtPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/postalCode" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fax" />

            <EditText
                android:id="@+id/txtFax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fax" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>