<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/domains"
        android:title="@string/domains"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/domains">
    </item>
    <item
        android:id="@+id/resellers"
        android:title="@string/resellers"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_supervisor_account_white_24dp">
    </item>
    <item
        android:id="@+id/servers"
        android:title="@string/servers"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_dns_white_24dp">
    </item>

</menu>