<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DomainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include android:id="@+id/toolbar"
                layout="@layout/toolbar"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/domain_information"
                android:textColor="@color/cardview_dark_background"
                android:textSize="25dp"
                android:textAlignment="center"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/domain_name"
                        android:textColor="@color/accent_blue"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expiration_date"
                        android:textColor="@color/accent_blue"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/owner"
                        android:textColor="@color/accent_blue"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address"
                        android:textColor="@color/accent_blue"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disk_usage"
                        android:textColor="@color/accent_blue"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/accent_blue"
                        android:textSize="20dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:id="@+id/txtDomain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:id="@+id/txtExpirationDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:id="@+id/txtOwner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:id="@+id/txtIP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:id="@+id/txtDiskUsage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/properties"
                android:textAlignment="center"
                android:textColor="@color/cardview_dark_background"
                android:textSize="25dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/start"
                        android:layout_margin="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:background="@android:color/holo_green_dark"
                        android:text="@string/start"
                        android:textAllCaps="false" />
                    <Button
                        android:id="@+id/stop"
                        android:layout_margin="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:background="@android:color/holo_red_dark"
                        android:text="@string/stop"
                        android:textAllCaps="false" />
                </LinearLayout>

                <Button
                    android:id="@+id/changePassword"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/managementFile"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/file_management"
                    android:textAllCaps="false"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/managementSubdomain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subdomain_management"
                    android:textAllCaps="false"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/managementAlias"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alias_management"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/managementMailbox"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mailbox_management"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/managementDatabase"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/database_management"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/managementFTP"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ftp_management"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/managementDNS"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dns_management"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
